deprecate single cookie property